--- a/src/excel.html
+++ b/src/excel.html
@@ -13,6 +13,6 @@
     <a href="javascript:void(0)" class="add">Add</a>
     <a href="javascript:void(0)" class="remove">Remove</a>
   </div>
-  <script type="module" src="main.js"></script>
+  <script src="../dev/main_bundle.js"></script>
 </body>
 </html>
